# 2ASMRS

./: .gitmodules  README.md  readme.md
extra/: README.md  midicontrol.sc  midicontrol.tidal
model/: ExploreModel.ipynb  audio_utils.py  autoencoder.py  requirements.txt  run.py  utils.py
synthetizer/: CMakeLists.txt  README.md
synthetizer/Source/: Autoencoder.h  Main.cpp  MainComponent.cpp  MainComponent.h
